# flashlight

./: .gitignore  README.md  dagster.yaml  pyproject.toml  settings.toml  workspace.yaml
flashlight/: definitions.py  jobs.py  prompts.py
flashlight/agent/: controller.py
flashlight/assets/: __init__.py  analyze_footer.py  extract_policy.py  simulate_opt_out.py
flashlight/resources/: __init__.py  action_recorder.py  llm_resource.py  s3_file_manager.py  text_extractor.py
flashlight/utils/: file_utils.py  page_utils.py  prompts.py
flashlight/workflow/: definitions.py  jobs.py
flashlight/workflow/assets/: __init__.py  analyze_footer.py  extract_privacy_policy.py  find_privacy_policy.py
flashlight/workflow/resources/: __init__.py  browser_manager.py  llm_resource.py  playwright_manager.py  s3_file_manager.py
storage/005248b2-e55d-48d7-952b-7187571074a1/compute_logs/: ngkhesfs.err
storage/0de45b0e-ec05-4679-8838-3c0669a44a82/compute_logs/: wgikmzgv.err
storage/2ea4bc09-06f0-4cdb-bc51-290bc9d1b823/compute_logs/: pkgqulqj.err
storage/3c9d77d1-e222-4791-8c1d-59d91c472fc0/compute_logs/: xqrkigzt.err
storage/3f51df76-01a5-4cfd-9aff-f9711eeb0c90/compute_logs/: zdlbimpb.err
storage/480bc3f0-efcf-4d05-a404-5f34d8f2fe05/compute_logs/: bonbfnwr.err
storage/4c6dff9c-7e77-4135-9625-0ee2b4d6a23d/compute_logs/: yuryypfh.err
storage/5f2f6ba7-72bf-471d-af0f-cbddc381fdbb/compute_logs/: ogthilnw.err
storage/63d0ab7f-a8a2-43ff-b7bd-6ddd47c3bf4c/compute_logs/: kcvnycdu.err
storage/666dc50c-0228-437a-a4f4-5e0cced9f3be/compute_logs/: qduawlqe.err
storage/7457abc2-5515-4a2e-aea6-5d910701c898/compute_logs/: zvxujtej.err
storage/7eb3ab31-0501-417e-bb64-e8239e70f854/compute_logs/: mcykjqsj.err
(+9 files in other folders)
