[project]
name = "flashlight"
version = "0.1.0"
description = "Automatically assess CCPA opt-out compliance using a mix of browser automation and agents"
authors = [
    { name = "Amrit Baveja", email = "abaveja@cs.stanford.edu" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use[memory]>=0.1.48",
    "dagster>=1.10.15",
    "dagster-aws>=0.26.15",
    "dagster-webserver>=1.10.15",
    "dynaconf>=3.2.11",
    "langchain>=0.3.22",
    "managed-browser>=0.1.5",
    "markdownify>=1.1.0",
    "trafilatura>=2.0.0",
]
